# ViRE-RAG-Benchmark

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml  ruff_errors.txt  run.txt
.github/ISSUE_TEMPLATE/: jules_task.md
.github/prompts/: use-antigravity-knowledge.prompt.md
.github/workflows/: ci.yml
bash-scripts/chunking/: 01-chunk-size.sh  02-overlap.sh  03-method-domain.sh  run-all.sh  strategy-fixed.sh  strategy-paragraph.sh  strategy-recursive.sh  strategy-semantic.sh  strategy-sentence.sh
bash-scripts/generate/: rq3-00-baseline.sh  rq3-01-hyde.sh  rq3-02-multi-query.sh  rq3-03-step-back.sh  rq3-04-decompose.sh  rq3-05-reranker.sh  rq3-06-crag.sh  rq3-07-compress.sh  rq3-08-self-rag.sh  sentence-dense-e5.sh
bash-scripts/retrieval/: run-all.sh  run-dense.sh  run-hybrid.sh  run-sparse.sh
benchmark/: CHUNKING_BENCHMARK.md  RETRIEVAL_BENCHMARK.md  __init__.py  chunking_benchmark.py  generation_benchmark.py  prepare_data.py  retrieving_benchmark.py  rq1_chunking_analysis.py  run_vibe_benchmark.py
data/: EduCoQA.csv  ViMedAQA_v2.csv  ViNewsQA.csv  ViRHE4QA_v2.csv  ViRe4MRC_v2.csv
data/processed/: summary.txt
docs/superpowers/plans/: 2026-03-26-native-rag-benchmark.md  2026-03-30-advanced-rag-foundation-phase1.md
docs/superpowers/specs/: 2026-03-26-native-rag-benchmark-design.md  2026-03-27-rag-evaluation-metrics-design.md  2026-03-30-advanced-rag-foundation-phase1.md
eda/: 02_CSConDa.ipynb  eda_utils.py
scripts/: chunking_stats.py  consolidate_datasets.py  eda_unified.py  evaluate_ragas.py  generate_chunking_report.py  generate_generation_report.py  generate_paper_figures.py  generate_retrieval_report.py
src/rag_bench/: __init__.py  chunker.py  cli.py  config.py  data_loader.py  evaluator.py  generator.py  indexer.py  pipeline.py  reporter.py  reranker.py  retriever.py  self_rag.py  timer.py
src/rag_bench/embeddings/: registry.py
src/rag_bench/query_transforms/: __init__.py  base.py  decompose.py  hyde.py  multi_query.py  passthrough.py  query_expansion.py  step_back.py
src/rag_bench/retrievers/: __init__.py  base.py  bm25.py  compressor.py  corrective.py  dartboard.py  dense.py  expanded.py  hybrid.py  hybrid_weighted.py  reranker.py  rrf_ensemble.py  tfidf.py
tests/: conftest.py  debug_ragas.py  test_chunker.py  test_cli.py  test_compressor.py  test_config.py  test_corrective.py  test_data_loader.py  test_decompose.py  test_evaluator.py  test_pipeline.py  test_pipeline_retriever_integration.py  test_query_transforms.py  test_ragas_evaluation.py  test_reporter.py  test_retriever_expanded.py  test_retrievers_bm25.py  test_retrievers_dartboard.py  test_retrievers_dense.py  test_retrievers_hybrid.py  test_retrievers_registry.py  test_retrievers_reranker.py  test_retrievers_rrf_ensemble.py  test_self_rag.py  test_tfidf_hybrid_weighted.py  test_timer.py  test_unified_pipeline.py
