[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vi-rag-bench"
version = "0.1.0"
description = "Vietnamese RAG Benchmark: evaluating Native/Advanced RAG pipelines across embedding models and LLMs on Vietnamese QA datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-text-splitters>=0.3",
    "chromadb>=1.0",
    "rouge-score>=0.1",
    "pandas>=2.0",
    "numpy>=2.0",
    "tqdm>=4.67",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]
semantic = ["bert-score>=0.3", "sentence-transformers>=2.0"]
evaluation = ["ragas>=0.2"]
vietnamese = ["underthesea>=6.0", "rank-bm25>=0.2"]

[project.scripts]
vi-rag-bench = "rag_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
